# CPL

./: .gitignore  CMakeLists.txt  makefile  readme.md  unsortiert.txt
src/: from_file.c  main.c
src/lib/: data.c  data.h  file.c  file.h  sort.c  sort.h  ui.c  ui.h
src/ui/: ui.c  ui.h
